# cmake-toolchain-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
toolchain/: CMakeLists.txt  toolchain.cmake.in
